--- a/index.css
+++ b/index.css
@@ -17,3 +17,23 @@
 .nav-items > ul > li {
     padding: 10px;
 }
+
+.item {
+    border: 1px solid black;
+    width: 200px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.item > img {
+    width: 100%;
+}
+
+.restaurantList {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item > h3 {
+    word-wrap: break-word
+}
